@@ -1,5 +1,9 @@
 {{$NEXT}}
 
+- The "--project" CLI argument is now optional. By default all projects are
+  searched for stories which can be delivered.
+
+
 1.000001 2017-04-26
 
 - Add IPC::System::Simple as a prereq for the benefit of autodie. Reported by
